# extract_words

./: Cargo.toml  testdata.csv  새 텍스트 문서.csv
src/: main.rs  main__.rs  paper.txt
